first section mobile view done

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -49,15 +49,16 @@
               <li class="nav-item">
                 <a class="nav-link menu-item" href="#">Drive with Us</a>
               </li>
-              <button href="#" class="btn signup-nav">SIGN UP</button>
+              <li class="nav-item">
+                <button href="#" class="btn signup-nav">SIGN UP</button>
+              </li>
 
           </div>
         </nav>
       
           <div class="container">
-            <div class="d-flex flex-row justify-content-between text-center" >
-              <div class="row">
-              <div class="col-md-6">
+            <div class="row" >
+              <div class="col-md-6 mr-auto">
                 <p id="right-main-text">
                       Meet the 
                       demands of 
@@ -65,12 +66,11 @@
                       Pharmacy delivery
                 </p>
               </div>
-            <div class="col-md-4 mt-md-5 pt-md-5">
+            <div class="col-md-4 align-self-center ml-auto">
                 <p id="left-main-text">
                   Connecting under-utilized fleets to businesses struggling to meet the demands of same day delivery.
                 </p>
             </div>
-          </div>
 
                   
           </div>
