--- a/Meditreks.html
+++ b/Meditreks.html
@@ -209,7 +209,7 @@
             <div class="py-4 text-center" >
               <div class="container">
                 <div class="row row-section4">
-                  <div class="col-lg-4 p-3">
+                  <div class="col-lg-4 p-3 col-md-6">
                     <div class="card card-section4">
                       <div class="card-body p-4"> 
                         <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-left">
