section 5 mobile added

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -214,7 +214,7 @@
                       <div class="card-body p-4"> 
                         <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-left">
                         <h1 class="section4-heading">SECURITY</h1>
-                        <p class="mb-0 section-sub-heading">Extensive delivery proofs, Intelligent AI location identification, Reciepent access protocols - We've built it all in!</p>
+                        <p class="section-sub-heading">Extensive delivery proofs, Intelligent AI location identification, Reciepent access protocols - We've built it all in!</p>
                       </div>
                     </div>
                   </div>
@@ -224,7 +224,7 @@
                       <div class="card-body p-4"> 
                         <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-right" >
                         <h1 class="section4-heading">SUPPORT</h1>
-                        <p class="mb-0 section-sub-heading">We are always available to help, <br>Email, chat or call!</p>
+                        <p class="section-sub-heading">We are always available to help, <br>Email, chat or call!</p>
                       </div>
                     </div>
                   </div>
@@ -234,7 +234,7 @@
                       <div class="card-body p-4"> 
                         <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-middle">
                         <h1 class="section4-heading">SAVINGS</h1>
-                        <p class="mb-0 section-sub-heading">Algorithmitic sorting and a blended driver supply mean the absolute lower cost for you!</p>
+                        <p class="section-sub-heading">Algorithmitic sorting and a blended driver supply mean the absolute lower cost for you!</p>
                       </div>
                     </div>
                   </div>
