before adding comments mobile view

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -304,7 +304,7 @@
         <div class="container">
           <div class="row">                  
                 <div class="col-md-9" style="padding-right: 3%;">
-                  <img class="mb-3 rounded-circle float-end" id="pic-one"
+                  <img class="mb-3 rounded-circle float-right" id="pic-one"
                   src="./Assets/Testimonials/CEO.png" width="80" height="80">
                 </div>
           </div>
@@ -322,11 +322,11 @@
       </div>
         <div class="row">
           <div class="col-md-6" style="padding-right: 8%;">
-            <img class="mb-3 rounded-circle float-end" id="pic-four"
+            <img class="mb-3 rounded-circle float-right" id="pic-four"
             src="./Assets/Testimonials/4.jpg" width="80" height="80">
         </div>
           <div class="col-md-6" style="padding-left: 8%;">
-            <img class="mb-3 rounded-circle float-start" id="pic-five"
+            <img class="mb-3 rounded-circle float-left" id="pic-five"
             src="./Assets/Testimonials/5.jpg" width="80" height="80">
           </div>
         
@@ -363,7 +363,6 @@
 
           <section id="section7">
               <div class="container">
-                <div class="row">
                   <div class="text-center">
                     <h1 class="section-heading">Our Features</h1>
                     <p class="section-sub-heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -371,25 +370,25 @@
                  
 
                 <div class="container sec7-container">
-                  <div class="row my-5 justify-content-center ms-md-5">
+                  <div class="row my-5 justify-content-center ml-md-5">
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4" style=""> <img class="img-fluid d-block float-right" src="./Assets/signature.png" alt="Card image cap" style="width: 100%;"> </div>
                         <div class="col-6 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>signature</b><br></h4>
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-4 ">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
-                        <div class="col-4 my-2" style=""> <img class="img-fluid d-block float-right" src="./Assets/notifications.png" alt="Card image cap" style="width: 66%;"> </div>
-                        <div class="col-6 d-flex flex-column justify-content-center me-4" style="">
-                          <h4 class="text-center f-text"> <b>Notifications</b><br></h4>
+                    <div class="col-lg-4">
+                      <div class="f-row row p-4">
+                        <div class="col-4 my-2" style=""> <img class="ml-5 img-fluid d-block" src="./Assets/notifications.png" alt="Card image cap" style="width: 68%;"> </div>
+                        <div class="col-7 align-self-center">
+                          <h4 class="f-text"> <b>Notifications</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4 my-2" style=""> <img class="img-fluid d-block float-right" src="./Assets/copay.png" alt="Card image cap" style="width: 98%;"> </div>
                         <div class="col-7 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>Co-Payments</b><br></h4>
@@ -397,9 +396,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row my-5 justify-content-center ms-md-5">
+                  <div class="row my-5 justify-content-center ml-md-5">
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5 ">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4 ">
                         <div class="col-4 my-3" style=""> <img class="img-fluid d-block float-right" src="./Assets/Camera.png" alt="Card image cap" style="width: 70%;"> </div>
                         <div class="col-6 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>Delivery Proof</b><br></h4>
@@ -407,7 +406,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4 my-3" style=""> <img class="img-fluid d-block float-right" src="./Assets/Qr-code.png" alt="Card image cap" style="width: 54%;"> </div>
                         <div class="col-7 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>Qr Scanning</b><br></h4>
@@ -415,7 +414,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4 my-3" style=""> <img class="img-fluid d-block float-right" src="./Assets/Shipping.png" alt="Card image cap" style="width: 73%;"> </div>
                         <div class="col-7 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>Item return</b><br></h4>
@@ -423,9 +422,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row my-5 ms-md-5">
+                  <div class="row my-5 ml-md-5">
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4 my-2" style=""> <img class=" img-fluid d-block float-right" src="./Assets/Report.png" alt="Card image cap" style="width: 56%;"> </div>
                         <div class="col-6 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>Delivery records</b><br></h4>
@@ -433,7 +432,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4 my-2" style=""> <img class="img-fluid d-block float-right" src="./Assets/Tracking.png" alt="Card image cap" style="width: 67%;"> </div>
                         <div class="col-6 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>Delivery tracking</b><br></h4>
@@ -441,7 +440,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 me-5">
+                      <div class="f-row row d-flex flex-row justify-content-center p-4">
                         <div class="col-4 my-2" style=""> <img class="ms-4 img-fluid d-block float-right" src="./Assets/Support.png" alt="Card image cap" style="width: 56%;"> </div>
                         <div class="col-7 d-flex flex-column justify-content-center" style="">
                           <h4 class="text-center f-text"> <b>support</b><br></h4>
@@ -462,7 +461,7 @@
                 </div> 
                 <div class="sec8-sec-container">
                 <div class="row justify-content-center">
-                <div class="col-5 pills-container d-flex flex-row  m-0 p-0">
+                <div class="col-md-5 col-sm-8 pills-container d-flex flex-row  m-0 p-0">
                   <div type="button" id="pills-slider"></div>
 
                   <button type="button" class="btn pill-button" id="Annually">Annually</button>
