--- a/Meditreks.html
+++ b/Meditreks.html
@@ -361,6 +361,54 @@
 
     </section>
 
+    <section id="section6-mobile">
+      <div class="py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-8 mt-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4"><img class="img-fluid d-block rounded-circle float-left" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+          </div>
+        </div>
+      </div>
+      <div class="py-5">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-10 col-8 col-sm-8">
+              <div class="triangle-isosceles right col-md-5" id="bubble">
+                <div class="col-md-12 ps-md-5 pe-md-5 pb-md-2" style="background-image: url(./Assets/Quotes.png); background-repeat:no-repeat; background-size: 30%; background-position-x: 19%;" >
+                  <h2 id="bubble-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+                  <h3 id="bubble-title">Jasi Toor</h3>
+                  <div class="d-flex flex-row justify-content-between">
+                  <h3 id="bubble-sub-title">CEO</h3>
+                  <div class="d-flex flex-row justify-content-end">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                  </div>
+      
+                </div>
+                </div>        
+              </div>              
+            </div>
+            <div class="col-md-2 col-sm-4 col-4" ><img class="img-fluid d-block rounded-circle float-right" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+          </div>
+        </div>
+      </div>
+      <div class="py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4 mt-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
           <section id="section7">
               <div class="container">
                   <div class="text-center">
