second comments added-

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -362,19 +362,20 @@
     </section>
 
     <section id="section6-mobile">
-      <div class="py-5">
+      <div class="py-5" >
         <div class="container">
           <div class="row">
-            <div class="col-md-8 col-8 mt-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
-            <div class="col-md-4 col-4"><img class="img-fluid d-block rounded-circle float-left" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto mt-4" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4 mt-0 mb-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto mt-4" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
           </div>
         </div>
       </div>
-      <div class="py-5">
-        <div class="container-fluid">
+      <div class="">
+        <div class="container">
           <div class="row">
-            <div class="col-md-10 col-8 col-sm-8">
-              <div class="triangle-isosceles right col-md-5" id="bubble">
+            <div class="col-md-12">
+              <div class="triangle-isosceles top col-md-5" id="bubble">
                 <div class="col-md-12 ps-md-5 pe-md-5 pb-md-2" style="background-image: url(./Assets/Quotes.png); background-repeat:no-repeat; background-size: 30%; background-position-x: 19%;" >
                   <h2 id="bubble-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
@@ -390,10 +391,8 @@
                   </div>
       
                 </div>
-                </div>        
-              </div>              
+                </div>        </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-4" ><img class="img-fluid d-block rounded-circle float-right" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
           </div>
         </div>
       </div>
@@ -406,7 +405,6 @@
           </div>
         </div>
       </div>
-
     </section>
 
           <section id="section7">
