--- a/Meditreks.html
+++ b/Meditreks.html
@@ -365,9 +365,9 @@
       <div class="py-5" >
         <div class="container">
           <div class="row">
-            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto mt-4" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
-            <div class="col-md-4 col-4 col-sm-4 mt-0 mb-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
-            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto mt-4" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4"><img id="pic3-mobile" class="img-fluid d-block rounded-circle mx-auto mt-4" src="./Assets/Testimonials/Muhammed.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4 mt-0 mb-4"><img id="pic2-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/5.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4"><img id="pic1-mobile" class="img-fluid d-block rounded-circle mx-auto mt-4" src="./Assets/Testimonials/CEO.png" width="90"></div>
           </div>
         </div>
       </div>
@@ -375,13 +375,13 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <div class="triangle-isosceles top col-md-5" id="bubble">
+              <div class="triangle-isosceles top col-md-5" id="bubble-mobile">
                 <div class="col-md-12 ps-md-5 pe-md-5 pb-md-2" style="background-image: url(./Assets/Quotes.png); background-repeat:no-repeat; background-size: 30%; background-position-x: 19%;" >
-                  <h2 id="bubble-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  <h2 id="bubble-text-mobile">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
-                  <h3 id="bubble-title">Jasi Toor</h3>
+                  <h3 id="bubble-title-mobile">Jasi Toor</h3>
                   <div class="d-flex flex-row justify-content-between">
-                  <h3 id="bubble-sub-title">CEO</h3>
+                  <h3 id="bubble-sub-title-mobile">CEO</h3>
                   <div class="d-flex flex-row justify-content-end">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -399,9 +399,9 @@
       <div class="py-5">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
-            <div class="col-md-4 col-4 col-sm-4 mt-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
-            <div class="col-md-4 col-4 col-sm-4"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4"><img id="pic4-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/1.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4 mt-4"><img id="pic5-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/4.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4"><img id="pic6-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/2.jpg" width="90"></div>
           </div>
         </div>
       </div>
