section7 fixed in all views-

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -418,25 +418,25 @@
                 <div class="container sec7-container">
                   <div class="row my-5 justify-content-center ml-md-5">
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4" style=""> <img class="img-fluid d-block float-right" src="./Assets/signature.png" alt="Card image cap" style="width: 100%;"> </div>
-                        <div class="col-6 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4">
+                        <div class="col-4 my-1" style=""> <img class="img-fluid d-block float-right" src="./Assets/signature.png" alt="Card image cap" style="width: 100%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>signature</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="f-row row p-4">
-                        <div class="col-4 my-2" style=""> <img class="ml-5 img-fluid d-block" src="./Assets/notifications.png" alt="Card image cap" style="width: 68%;"> </div>
+                        <div class="col-4 my-2" style=""> <img class="ml-3 img-fluid d-block" src="./Assets/notifications.png" alt="Card image cap" style="width: 68%;"> </div>
                         <div class="col-7 align-self-center">
                           <h4 class="f-text"> <b>Notifications</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4 my-2" style=""> <img class="img-fluid d-block float-right" src="./Assets/copay.png" alt="Card image cap" style="width: 98%;"> </div>
-                        <div class="col-7 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row  p-4">
+                        <div class="col-4 my-2" style=""> <img class=" ml-2 img-fluid d-block float-right" src="./Assets/copay.png" alt="Card image cap" style="width: 100%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>Co-Payments</b><br></h4>
                         </div>
                       </div>
@@ -444,25 +444,25 @@
                   </div>
                   <div class="row my-5 justify-content-center ml-md-5">
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4 ">
-                        <div class="col-4 my-3" style=""> <img class="img-fluid d-block float-right" src="./Assets/Camera.png" alt="Card image cap" style="width: 70%;"> </div>
-                        <div class="col-6 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4 ">
+                        <div class="col-4 my-2" style=""> <img class="img-fluid d-block float-right" src="./Assets/Camera.png" alt="Card image cap" style="width: 90%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>Delivery Proof</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4 my-3" style=""> <img class="img-fluid d-block float-right" src="./Assets/Qr-code.png" alt="Card image cap" style="width: 54%;"> </div>
-                        <div class="col-7 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4">
+                        <div class="col-4 my-2" style=""> <img class="ml-4 img-fluid d-block float-center" src="./Assets/Qr-code.png" alt="Card image cap" style="width: 70%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>Qr Scanning</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4 my-3" style=""> <img class="img-fluid d-block float-right" src="./Assets/Shipping.png" alt="Card image cap" style="width: 73%;"> </div>
-                        <div class="col-7 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4">
+                        <div class="col-5 my-2" style=""> <img class="img-fluid d-block float-center" src="./Assets/Shipping.png" alt="Card image cap" style="width: 73%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>Item return</b><br></h4>
                         </div>
                       </div>
@@ -470,25 +470,25 @@
                   </div>
                   <div class="row my-5 ml-md-5">
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4 my-2" style=""> <img class=" img-fluid d-block float-right" src="./Assets/Report.png" alt="Card image cap" style="width: 56%;"> </div>
-                        <div class="col-6 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4">
+                        <div class="col-4 my-1" style=""> <img class="ml-4 img-fluid d-block float-center" src="./Assets/Report.png" alt="Card image cap" style="width: 76%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>Delivery records</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4 my-2" style=""> <img class="img-fluid d-block float-right" src="./Assets/Tracking.png" alt="Card image cap" style="width: 67%;"> </div>
-                        <div class="col-6 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4">
+                        <div class="col-4 my-0" style=""> <img class="ml-4 img-fluid d-block float-center" src="./Assets/Tracking.png" alt="Card image cap" style="width: 80%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>Delivery tracking</b><br></h4>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <div class="f-row row d-flex flex-row justify-content-center p-4">
-                        <div class="col-4 my-2" style=""> <img class="ms-4 img-fluid d-block float-right" src="./Assets/Support.png" alt="Card image cap" style="width: 56%;"> </div>
-                        <div class="col-7 d-flex flex-column justify-content-center" style="">
+                      <div class="f-row row p-4">
+                        <div class="col-4 my-1" style=""> <img class="ml-4 img-fluid d-block float-center" src="./Assets/Support.png" alt="Card image cap" style="width: 70%;"> </div>
+                        <div class="col-7 align-self-center" style="">
                           <h4 class="text-center f-text"> <b>support</b><br></h4>
                         </div>
                       </div>
