--- a/Meditreks.html
+++ b/Meditreks.html
@@ -38,16 +38,16 @@
                 <a class="nav-link menu-item" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu-item" href="#">About</a>
+                <a class="nav-link menu-item" href="#section4">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu-item" href="#">Features</a>
+                <a class="nav-link menu-item" href="#section7">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu-item" href="#">Pricing</a>
+                <a class="nav-link menu-item" href="#section8">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu-item" href="#">Drive with Us</a>
+                <a class="nav-link menu-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdrK2iNGs7-PZTIZoLVOsKVbDun1UxvWkzDD7pzessdm-1b1g/viewform?fbzx=7209146676382562766">Drive with Us</a>
               </li>
               <li class="nav-item">
                 <button href="#" class="btn signup-nav">SIGN UP</button>
