added styles for mobile

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -516,8 +516,8 @@
               </div>
 
               <div class="d-flex flex-row justify-content-center mb-5 mt-5">
-                <h1 id="delivery-price-sub" class="section-heading mt-3">$199.99</h1>
-                <h4 id="delivery-number-sub" class="align-bottom align-items-end d-flex mb-4 ms-3" >/ PER YEAR</h4>
+                <h1 id="delivery-price-sub" class="section-heading mr-3 mt-3">$199.99</h1>
+                <h4 id="delivery-number-sub" class="align-bottom align-items-end d-flex mb-4 ms-3" > / PER YEAR</h4>
               </div>
 
               <div class="row ">
@@ -568,7 +568,7 @@
           </div>
 
           <div class="mt-5 d-flex flex-row justify-content-center mb-5">
-            <h1 id="delivery-price" class="section-heading">$7</h1>
+            <h1 id="delivery-price" class="section-heading mr-3">$7</h1>
             <h4 id="delivery-number" class="align-bottom align-items-end d-flex mb-4 ms-3" >/ LESS THAN 100 ORDER</h4>
           </div>
               <div class="px-5 mx-5 row justify-content-center mb-5">
@@ -577,7 +577,7 @@
                 </div>
               </div>
 
-              <div class="text-center">
+              <div class="text-center mb-5 m-md-0">
                 <button class="btn pricing-btn">Signup NOW</button>
               </div>
               </div>
