all added except slider bug

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -47,7 +47,7 @@
                 <a class="nav-link menu-item" href="#section8">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdrK2iNGs7-PZTIZoLVOsKVbDun1UxvWkzDD7pzessdm-1b1g/viewform?fbzx=7209146676382562766">Drive with Us</a>
+                <a class="nav-link menu-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdrK2iNGs7-PZTIZoLVOsKVbDun1UxvWkzDD7pzessdm-1b1g/viewform?fbzx=7209146676382562766" target="_blank">Drive with Us</a>
               </li>
               <li class="nav-item">
                 <button href="#" class="btn signup-nav">SIGN UP</button>
