26april chnages added

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -305,36 +305,36 @@
           <div class="row">                  
                 <div class="col-md-9" style="padding-right: 3%;">
                   <img class="mb-3 rounded-circle float-right" id="pic-one"
-                  src="./Assets/Testimonials/CEO.png" width="80" height="80">
+                  src="./Assets/Testimonials/yasmin.jfif" width="80" height="80">
                 </div>
           </div>
       <div class="row">
         <div class="col-md-6" style="padding-right: 15%;">
           <img class="pic-two mb-3 rounded-circle" id="pic-two"
-          src="./Assets/Testimonials/Muhammed.jpg" width="80" height="80">
+          src="./Assets/Testimonials/Amira.jpg" width="80" height="80">
         </div>
         <div class="col-md-6" style="padding-right: 3%;">
           <div class="col-md-12 d-flex flex-row justify-content-end">
             <img class="mb-3 rounded-circle" id="pic-three"
-            src="./Assets/Testimonials/6.jpg" width="80" height="80">
+            src="./Assets/Testimonials/Sharon.jfif" width="80" height="80">
                     </div>
         </div>
       </div>
         <div class="row">
           <div class="col-md-6" style="padding-right: 8%;">
             <img class="mb-3 rounded-circle float-right" id="pic-four"
-            src="./Assets/Testimonials/4.jpg" width="80" height="80">
+            src="./Assets/Testimonials/maher.jfif" width="80" height="80">
         </div>
           <div class="col-md-6" style="padding-left: 8%;">
             <img class="mb-3 rounded-circle float-left" id="pic-five"
-            src="./Assets/Testimonials/5.jpg" width="80" height="80">
+            src="./Assets/Testimonials/cambrian.jpg" width="80" height="80">
           </div>
         
         </div>
         <div class="row">
           <div class="col-md-12 justify-content-start d-flex" style="padding-left: 3%;">
             <img class="mb-3 rounded-circle" id="pic-six"
-            src="./Assets/Testimonials/2.jpg" width="80" height="80">
+            src="./Assets/Testimonials/aspen.jfif" width="80" height="80">
                     </div>
         </div>
         </div>
@@ -342,11 +342,11 @@
 
         <div class="triangle-isosceles right col-md-5" id="bubble">
           <div class="col-md-12 ps-md-5 pe-md-5 pb-md-2" style="background-image: url(./Assets/Quotes.png); background-repeat:no-repeat; background-size: 30%; background-position-x: 19%;" >
-            <h2 id="bubble-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
-            <h3 id="bubble-title">Jasi Toor</h3>
+            <h2 id="bubble-text">Treks - The most efficient, timely and reliable service as demanded by my pharmacy clientele. I would highly recommend for its performance and trustworthiness.</h2>
+            <h3 id="bubble-title">Yasmin Kanji</h3>
             <div class="d-flex flex-row justify-content-between">
-            <h3 id="bubble-sub-title">CEO</h3>
+            <h3 id="bubble-sub-title">Shoppers Drug Mart - Kingsland Plaza
+            </h3>
             <div class="d-flex flex-row justify-content-end">
               <i class="fa fa-star" aria-hidden="true"></i>
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -365,9 +365,9 @@
       <div class="py-5" >
         <div class="container">
           <div class="row">
-            <div class="col-md-4 col-4 col-sm-4"><img id="pic3-mobile" class="img-fluid d-block rounded-circle mx-auto mt-4" src="./Assets/Testimonials/Muhammed.jpg" width="90"></div>
-            <div  class="col-md-4 col-4 col-sm-4 mt-0 mb-4"><img id="pic2-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/5.jpg" width="90"></div>
-            <div  class="col-md-4 col-4 col-sm-4"><img id="pic1-mobile" class="img-fluid d-block rounded-circle mx-auto mt-4" src="./Assets/Testimonials/CEO.png" width="90"></div>
+            <div class="col-md-4 col-4 col-sm-4"><img id="pic3-mobile" class="img-fluid d-block rounded-circle mx-auto mt-4" src="./Assets/Testimonials/Sharon.jfif" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4 mt-0 mb-4"><img id="pic2-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/Amira.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4"><img id="pic1-mobile" class="img-fluid d-block rounded-circle mx-auto mt-4" src="./Assets/Testimonials/yasmin.jfif" width="90"></div>
           </div>
         </div>
       </div>
@@ -377,11 +377,10 @@
             <div class="col-md-12">
               <div class="triangle-isosceles top col-md-5" id="bubble-mobile">
                 <div class="col-md-12 ps-md-5 pe-md-5 pb-md-2" style="background-image: url(./Assets/Quotes.png); background-repeat:no-repeat; background-size: 30%; background-position-x: 19%;" >
-                  <h2 id="bubble-text-mobile">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
-                  <h3 id="bubble-title-mobile">Jasi Toor</h3>
+                  <h2 id="bubble-text-mobile">Treks - The most efficient, timely and reliable service as demanded by my pharmacy clientele. I would highly recommend for its performance and trustworthiness.</h2>
+                  <h3 id="bubble-title-mobile">Yasmin Kanji</h3>
                   <div class="d-flex flex-row justify-content-between">
-                  <h3 id="bubble-sub-title-mobile">CEO</h3>
+                  <h3 id="bubble-sub-title-mobile">Shoppers Drug Mart - Kingsland Plaza</h3>
                   <div class="d-flex flex-row justify-content-end">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -399,9 +398,9 @@
       <div class="py-5">
         <div class="container">
           <div class="row">
-            <div  class="col-md-4 col-4 col-sm-4"><img id="pic4-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/1.jpg" width="90"></div>
-            <div  class="col-md-4 col-4 col-sm-4 mt-4"><img id="pic5-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/4.jpg" width="90"></div>
-            <div  class="col-md-4 col-4 col-sm-4"><img id="pic6-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/2.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4"><img id="pic4-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/aspen.jfif" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4 mt-4"><img id="pic5-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/cambrian.jpg" width="90"></div>
+            <div  class="col-md-4 col-4 col-sm-4"><img id="pic6-mobile" class="img-fluid d-block rounded-circle mx-auto" src="./Assets/Testimonials/maher.jfif" width="90"></div>
           </div>
         </div>
       </div>
@@ -564,13 +563,13 @@
             <div class="container-fluid">
               <div class="row d-flex flex-row justify-content-between">
                 <div class="col-4 col-md-4">
-                  <h4  class="price-text">10 - 100 Deliveries / Month</h4>
+                  <h4  class="price-text">1 - 350 Deliveries / Month</h4>
                 </div>
                 <div class="col-4 col-md-4">
-                  <h4 class="price-text"> 101 - 500 Deliveries / Month</h4>
+                  <h4 class="price-text"> 351 - 700 Deliveries / Month</h4>
                 </div>
                 <div class="col-4 col-md-4" >
-                  <h4 class="price-text">500+ Deliveries / Month</h4>
+                  <h4 class="price-text">700+ Deliveries / Month</h4>
                 </div>
               </div>
             </div>
