--- a/Meditreks.html
+++ b/Meditreks.html
@@ -140,7 +140,7 @@
                   </div>
 
                   <div class="carousel-item">
-                        <img src="./Assets/audi-2.jpg" class="d-block w-100 h-0" alt="...">
+                        <img src="./Assets/Audi-2.jpg" class="d-block w-100 h-0" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h1 class="section3-heading text-left">Auditability</h1>     
                           <p class="section3-sub-heading">We keep records of everything! You don't have to worry about viewing all of your history online.</p> 
@@ -580,15 +580,15 @@
           <div id="mobile-pricing" class="text-center text-white" style="" >
             <div class="container-fluid">
               <div class="row">
-                <div class="p-4 col-12 col-sm-12"> <img id="price-img-mobile" class="img-fluid d-block mb-3 mx-auto" src="./Assets/Small.png" alt="Card image cap" width="100">
-                  <h4 id="price-text-mobile" class="price-text"> 101 - 500 Deliveries / Month</h4>
+                <div class="p-4 col-12 col-sm-12"> <img id="price-img-mobile" class="img-fluid d-block mb-3 mx-auto" src="./Assets/Large.png" alt="Card image cap" width="100">
+                  <h4 id="price-text-mobile" class="price-text"> 351 - 700 Deliveries / Month</h4>
                 </div>
               </div>
             </div>
           </div>
 
           <div class="mt-5 d-flex flex-row justify-content-center mb-5">
-            <h1 id="delivery-price" class="section-heading mr-3">$7</h1>
+            <h1 id="delivery-price" class="section-heading mr-3">$6</h1>
             <h4 id="delivery-number" class="align-bottom align-items-end d-flex mb-4 ms-3" >/ PER DELIVERY</h4>
           </div>
               <div class="px-5 mx-5 row justify-content-center mb-5">
