--- a/Meditreks.html
+++ b/Meditreks.html
@@ -509,8 +509,8 @@
                 <div class="col-10 col-md-5 pills-container d-flex flex-row m-0 p-0">
                   <div class="row" type="button" id="pills-slider"></div>
 
-                  <button type="button" class="col-6 mr-3 btn pill-button" id="Annually">Annually</button>
-                  <button type="button" class="col-6 ml-2 btn pill-button" id="Monthly">Monthly</button>    
+                  <button class="col-6 mr-3 btn pill-button" id="Annually">Annually</button>
+                  <button class="col-6 ml-2 btn pill-button" id="Monthly">Monthly</button>    
                 </div>
               </div>
 
