--- a/Meditreks.html
+++ b/Meditreks.html
@@ -506,7 +506,7 @@
                 </div> 
                 <div class="sec8-sec-container">
                 <div class="row justify-content-center">
-                <div class="col-10 col-md-5 pills-container d-flex flex-row m-0 p-0">
+                <div class="col-10 col-md-5 pills-container d-flex flex-row">
                   <div class="row" type="button" id="pills-slider"></div>
 
                   <button class="col-6 mr-3 btn pill-button" id="Annually">Annually</button>
