--- a/Meditreks.html
+++ b/Meditreks.html
@@ -506,8 +506,8 @@
                 </div> 
                 <div class="sec8-sec-container">
                 <div class="row justify-content-center">
-                <div class="col-10 col-md-5 pills-container d-flex flex-row">
-                  <div class="row" type="button" id="pills-slider"></div>
+                <div class="col-10 col-md-5 pills-container d-flex flex-row m-0 p-0">
+                  <div class="row" id="pills-slider"></div>
 
                   <button class="col-6 mr-3 btn pill-button" id="Annually">Annually</button>
                   <button class="col-6 ml-2 btn pill-button" id="Monthly">Monthly</button>    
