--- a/Meditreks.html
+++ b/Meditreks.html
@@ -26,7 +26,7 @@
     <section id="section1">
       <div class="main-cover-wrapper">
 
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg nav-class">
           <img class="navbar-brand navbar-brand-left mr-auto" src="./Assets/Meditreks-logo.png" href="#">
           <button id= "toggler" class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent, #sec1-container" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:white"></i></span>
@@ -34,9 +34,9 @@
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <!-- <li class="nav-item active">
                 <a class="nav-link menu-item" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link menu-item" href="#section4">About</a>
               </li>
