fixed section4 for tabs2

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -224,7 +224,7 @@
                       <div class="card-body p-4"> 
                         <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-right" >
                         <h1 class="section4-heading">SUPPORT</h1>
-                        <p class="section-sub-heading">We are always available to help, <br>Email, chat or call!</p>
+                        <p class="section-sub-heading">We're always available to help you get the suppport you need with the method you choose. Email, chat or call!</p>
                       </div>
                     </div>
                   </div>
