fixed section5 for tabs

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -428,7 +428,7 @@
                       <div class="f-row row p-4">
                         <div class="col-4 my-2" style=""> <img class="ml-3 img-fluid d-block" src="./Assets/notifications.png" alt="Card image cap" style="width: 68%;"> </div>
                         <div class="col-7 align-self-center">
-                          <h4 class="f-text"> <b>Notifications</b><br></h4>
+                          <h4 class="f-text text-center"> <b>Notifications</b><br></h4>
                         </div>
                       </div>
                     </div>
